examples/test/testpolicy15707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15707
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key37: value4
      key40: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value5
          key37: value42
          key42: value12
      podSelector:
        matchLabels:
          key31: value41
          key35: value44
